// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account resources createAccountSetting should resolve on success 1`] = `
{
  "config": {
    "data": "{"data":{"views":{"1":{"display_order":0}},"view_sections":{"1":{"display_order":1}}},"type":"views-ordering"}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/account/settings/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": {
    "data": {
      "view_sections": {
        "1": {
          "display_order": 1,
        },
      },
      "views": {
        "1": {
          "display_order": 0,
        },
      },
    },
    "id": 2,
    "type": "views-ordering",
  },
  "headers": undefined,
  "request": {
    "responseUrl": "/api/account/settings/",
  },
  "status": 200,
}
`;

exports[`account resources updateAccountSetting should resolve on success 1`] = `
{
  "config": {
    "data": "{"data":{"views":{"1":{"display_order":0}},"view_sections":{"1":{"display_order":1}}},"id":2,"type":"views-ordering"}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "put",
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/account/settings/2/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": {
    "data": {
      "view_sections": {
        "1": {
          "display_order": 1,
        },
      },
      "views": {
        "1": {
          "display_order": 0,
        },
      },
    },
    "id": 2,
    "type": "views-ordering",
  },
  "headers": undefined,
  "request": {
    "responseUrl": "/api/account/settings/2/",
  },
  "status": 200,
}
`;

exports[`account resources updateAccountSetting should resolve on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [
    {
      "data": "{"data":{"views":{"1":{"display_order":0}},"view_sections":{"1":{"display_order":1}}},"id":2,"type":"views-ordering"}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/account/settings/2/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;
